[package]
name = "backend"
version = "0.1.0"
authors = ["ivan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocket_cors = "0.5.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.14.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"